2009-01-31  Stefan Kost  <ensonic@users.sf.net>

	* tests/gobject/src/gobject.c:
	  Try to link to struct members as a test for Bug #565126.

2009-01-30  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Expanding urls is not a good idea yet. Need to figure out.

2009-01-29  Stefan Kost  <ensonic@users.sf.net>

	* tests/tools.sh:
	  Remove, this is generated.

2009-01-29  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Automatically creating ulinks for urls.

	* tests/gobject/src/gobject.c:
	  Add a link for testing.

2009-01-28  Stefan Kost  <ensonic@users.sf.net>

	* style-classic.css:
	* style.css:
	* tests/gobject/docs/tester-docs.xml:
	* tests/gobject/src/gobject.c:
	  Major CSS cleanup. This is hopefully an end of layout issues related
	  to the fixed navigation bar.

2009-01-28  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* gtkdoc-mkdb.in:
	* tests/gobject/src/giface.c:
	* tests/gobject/src/gobject.c:
	  Abbreviation where not expanded at the start of text. Fixes #569339.

2009-01-28  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-fixxref.in:
	* tests/gobject/examples/gobject.c:
	  Expand urls in comments of examples.

2009-01-27  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-fixxref.in:
	* style.css:
	  Use tables like described in #536928.

	* tests/tools.sh
	  Comment on why we do the tool check like this.
  
	* tests/fail.sh:
	  Comment on test.

	* tests/gobject/docs/tester-docs.xml:
	  Fix xml a bit.

2009-01-26  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* tests/bugs/src/tester.h:
	* tests/fail.sh:
	* tests/fail/docs/tester-docs.xml:
	* tests/fail/docs/tester-sections.txt:
	* tests/fail/src/tester.c:
	  Add public symbols from section file when doing the -undocumented.txt
	  report. Also add the special symbols for the section docs when reading
	  the section-file. Extend test suite to check for it. Fixes #568732

2009-01-26  Stefan Kost  <ensonic@users.sf.net>
