@@ -1,3 +1,12 @@
+2009-02-05  Stefan Kost  <ensonic@users.sf.net>
+
+	* TODO:
+	  Some planning.
+
+	* gtkdoc-mkdb.in:
+	  Single tabs are rendered inconsistently in browsers. Replace them with
+	  a &nbsp;.
+
 2009-01-31  Stefan Kost  <ensonic@users.sf.net>
 
 	* tests/gobject/src/gobject.c:
